# codonsplice

./: .gitignore  .gitmodules  AUTONOMOUS_NOTES.md  COORDINATION_LOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
crates/: spliceql
crates/codonsplice-core/: Cargo.toml
crates/codonsplice-core/examples/: bench_shard.rs  profile_variants.rs  wasm_baseline.rs
crates/codonsplice-core/src/: annotate.rs  bytecode.rs  codon.rs  compiler.rs  lib.rs  materialize.rs  runtime.rs  shard.rs  vm.rs
crates/codonsplice-core/tests/: annotate_tests.rs  build_tests.rs  compiler_tests.rs  from_vcf_tests.rs  grammar_tests.rs  header_materialize_tests.rs  hgvs_real_reference_tests.rs  indel_e2e_tests.rs  isec_tests.rs  multiallelic_tests.rs  paired_tests.rs  projected_vcf_tests.rs  projection_tests.rs  reads_coordinate_tests.rs  serialize_and_order_tests.rs  shard_equivalence_tests.rs  streaming_tests.rs  var_tests.rs  vcf_tests.rs  vm_integration_tests.rs
crates/codonsplice-core/tests/data/: annotate_egfr.vcf  egfr_impact.vcf  multiallelic.vcf
crates/codonsplice-wasm/: Cargo.toml
crates/codonsplice-wasm/js/: coi-server.mjs  shard-pool.js  shard-worker.js  verify-coi.html
crates/codonsplice-wasm/src/: lib.rs
crates/codonsplice-wasm/test/: byte_identity.mjs
crates/splice-cli/: Cargo.toml
crates/splice-cli/src/: build.rs  create.rs  directive.rs  installer.rs  main.rs  spq.rs  tui.rs  update.rs
crates/spliceql-grammar/: Cargo.toml
crates/spliceql-grammar/grammars/: spliceql.tmLanguage.json
crates/spliceql-grammar/linguist/: LINGUIST_PR.md  languages.yml.fragment  sample.spq
crates/spliceql-grammar/src/: lib.rs
crates/spliceql-grammar/vscode/: package.json
docs/: FROM_VCF.md  NPM_PACKAGE.md  PHASE4_API.md  PHASE4_DESIGN.md  PHASE5_API.md  PHASE5_SCOPE.md  PHASE6_SCOPE.md  TEST_DATA_MANIFEST.md
docs/design/: ANNOTATE.md  PARALLELISM_WASM.md
docs/superpowers/plans/: 2026-06-28-cigar-indel-calling.md  2026-06-28-four-track-vcf-annotate-parallel-cnv.md  2026-06-28-integration-and-ship.md
pkg/: codonsplice_wasm.d.ts  codonsplice_wasm.js  codonsplice_wasm_bg.wasm  codonsplice_wasm_bg.wasm.d.ts  index.js  package.json
pkg/astro/: index.js  package.json
pkg/editor/: index.js  package.json
pkg/react/: index.js  package.json
pkg/svelte/: index.js  package.json
pkg/vue/: index.js  package.json
scripts/: build-cli-packages.sh  build-wasm.sh  cnv_depth_baseline.sh  install.ps1  install.sh  post-wasm-build.js
scripts/cli-templates/: binary.js  install.js  splice-wrapper.js  splice.cmd
templates/binary/: Cargo.toml.tmpl
templates/binary/src/: main.rs.tmpl
testdata/: EGFR_region.GRCh37.gff3  clinvar_GRCh37_EGFR.vcf.gz.tbi  cnv_depth_baseline.bed
tests/cli_package_tests/: test-install.sh  test-platform-detection.js
