[package]
name = "codonsplice-core"
version = "0.2.0"
edition = "2021"
description = "CodonSplice engine — SpliceQL bytecode compiler, VM, and (Phase 4) cnvlens-core bridge"
license = "MIT"

# The read-only spliceql language crate (lexer + parser + AST), referenced via
# the workspace `crates/spliceql` symlink. The `version` is required for
# `cargo publish` (the path is used for local builds; downstream consumers
# resolve the registry version). Must be >= the spliceql release that carries
# Format::Json/Tsv, hence 0.1.1.
[dependencies]
spliceql = { path = "../spliceql", version = "0.2.0" }
# Phase 4: the genomic execution backend. cnvlens-core exposes an `rlib` target,
# so the native VM links its plain functions directly (BAM/VCF parsing, coverage,
# variant calling, BAI seeking). Referenced by relative path to the sibling repo.
cnvlens-core = { path = "../../cnvlens/rust/cnvlens-core", version = "0.2.0" }
# preserve_order keeps JSON/TSV columns in record/projection order (a Variant's
# struct-field order, or the SELECT column order) instead of sorting them.
serde_json = { version = "1", features = ["preserve_order"] }
# Track 2 density-aware sharding reads the BAI linear index (compressed bytes per
# 16 kb window) to estimate read density, plus the BAM header to resolve a chrom
# to its reference id. Same noodles release cnvlens-core links, so no version skew.
noodles = { version = "0.111", features = ["bam", "bgzf", "csi", "core", "sam"] }
# ANNOTATE reads local GFF (plain) and ClinVar (BGZF) annotation databases.
# flate2's MultiGzDecoder transparently inflates BGZF (a series of concatenated
# gzip blocks) for whole-file decode — no noodles/bgzf dependency needed here.
flate2 = "1"

[dev-dependencies]
# Integration tests compare the VM against direct cnvlens-core calls and parse
# emitted record JSON.
cnvlens-core = { path = "../../cnvlens/rust/cnvlens-core", version = "0.2.0" }
serde_json = "1"
