[package]
name = "codonsplice-wasm"
version = "0.1.1"
edition = "2021"
description = "CodonSplice WASM bindings — the @codonsplice/wasm npm package"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
codonsplice-core = { path = "../codonsplice-core" }
spliceql = { path = "../spliceql" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["File", "FileReader", "Blob"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
