[package]
name = "codonsplice-wasm"
version = "0.2.0"
edition = "2021"
description = "CodonSplice WASM bindings — the @codonsplice/wasm npm package"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
codonsplice-core = { path = "../codonsplice-core" }
spliceql = { path = "../spliceql" }
# Track 2 WASM sharding: the per-shard `call_variants_region` export calls the
# genomic backend directly (same crate codonsplice-core links, so no version
# skew) and reuses its `Region`/`VariantOptions` models.
cnvlens-core = { path = "../../cnvlens/rust/cnvlens-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# preserve_order: merge_shards round-trips per-shard variants through
# serde_json::Value, so object key order must be preserved (insertion order) to
# stay byte-identical to the struct-ordered serial output. Same feature
# codonsplice-core/cnvlens-core enable.
serde_json = { version = "1", features = ["preserve_order"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["File", "FileReader", "Blob"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
