[package]
name = "splice-cli"
version = "0.1.13"
edition = "2021"
description = "CodonSplice CLI + TUI — the `splice` binary"
license = "MIT"

[[bin]]
name = "splice"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
codonsplice-core = { path = "../codonsplice-core" }
crossterm = "0.29.0"
ratatui = "0.30.2"
spliceql = { path = "../spliceql" }
# Installer: tiny blocking HTTP client for the GitHub releases API (no async).
ureq = "2"
serde_json = "1"
